--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "freemind-white-noise",
+  "name": "stayfocused-white-noise",
   "private": true,
   "version": "0.0.0",
   "type": "module",
