--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "howler": "^2.2.4",
     "i18next": "^24.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
